# scdl

./: .gitignore  Cargo.toml  README.md
src/: configuration.rs  downloader.rs  executor.rs  lib.rs
