[package]
name = "scdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
tokio = {version="1.19.2", features=["macros","rt-multi-thread"]}
error-chain = "0.12.4"
serde = {version="1.0.137",features=["derive"]}
config = "0.11"
futures = "0.3.21"
